; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_bytecode.c_filelength.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_bytecode.c_filelength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_END = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @filelength to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filelength(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @ftell(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @SEEK_END, align 4
  %9 = call i32 @fseek(i32* %7, i32 0, i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @ftell(i32* %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @SEEK_SET, align 4
  %15 = call i32 @fseek(i32* %12, i32 %13, i32 %14)
  %16 = load i32, i32* %4, align 4
  ret i32 %16
}

declare dso_local i32 @ftell(i32*) #1

declare dso_local i32 @fseek(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
